Fix details to have padding and fix cart height to overflow

--- a/app/assets/stylesheets/pages/_orders_show.scss
+++ b/app/assets/stylesheets/pages/_orders_show.scss
@@ -2,8 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.padding {
+  background: #eee;
+  height: 30px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0), 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
 .order {
   height: 100%;
+  // overflow: auto; 
 }
 
 .order--container ul, li, h3, section { 
@@ -19,6 +26,7 @@
   color: #2d2d2d;
   padding: 0px;
   @include col-top-center;
+  overflow: auto; 
 }
 
 .order--wrapper {
@@ -36,10 +44,12 @@
   margin-top: 8px;
   background: #FFFFFF;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0), 0 1px 2px rgba(0, 0, 0, 0.10);
+  margin-bottom: 20px;
 }
 
 .order--listings--wrapper {
   width: 90%;
+  margin: 20px;
 }
 
 .order--listings--header {
@@ -110,12 +120,12 @@
 
 .listing--details--brand {
   text-align: left;
-  padding: 0px;
+  padding: 5px 0px 5px 0px;
 }
 
 .listing--title {
   text-align: left;
-  padding: 0px;
+  padding: 5px 0px 5px 0px;
   width: 180px;
   white-space: nowrap;
   overflow: hidden;
@@ -124,10 +134,15 @@
 
 .listing--details--specs--wrapper {
   text-align: left;
-  padding: 0px;
+  padding: 5px 0px 5px 0px;
   list-style: none;
+  max-width: 100px;
   @include row-left-center;
   justify-content: flex-start;
+
+  li {
+    padding-right: 15px;
+  }
 }
 
 .listing--remove--btn {
